# autd3-link-soem

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  build.py  build.rs  codecov.yml
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  coverage.yml  pr.yml  release.yml
examples/: main.rs  remote_soem.rs  soem.rs
src/: error.rs  lib.rs  link_soem.rs
src/inner/: context.rs  ethernet_adapters.rs  handler.rs  iomap.rs  mod.rs  option.rs  smoothing.rs  status.rs  utils.rs
src/inner/option/: full.rs  mod.rs  simple.rs
src/inner/soem_bindings/: linux.rs  win32.rs
src/local/: builder.rs  error.rs  error_handler.rs  ethernet_adapters.rs  iomap.rs  link_soem.rs  mod.rs  option.rs  process_priority.rs  sleep.rs  state.rs  sync_mode.rs  timer_strategy.rs
src/local/inner/: context.rs  ethernet_adapters.rs  handler.rs  iomap.rs  mod.rs  option.rs  state.rs  status.rs  utils.rs
src/local/inner/soem_bindings/: mod.rs
src/local/soem_bindings/: linux.rs  macos.rs  mod.rs  win32.rs
src/remote/: link_soem_remote.rs  mod.rs
