[package]
name = "autd3-link-soem"
description = "autd3 link using SOEM"
readme = "README.md"
keywords = ["autd"]
version = "36.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/shinolab/autd3-link-soem"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["local"]
blocking = ["tokio"]
local = ["cc", "time", "thiserror", "windows", "thread-priority", "spin_sleep", "autd3-core/utils", "autd3-core/sleep", "autd3-core/std"]
remote = ["autd3-protobuf", "tonic", "async"]
all = ["local", "remote"]
serde = ["dep:serde"]
async = ["autd3-core/async"]

[dependencies]
autd3-core = { version = "36.0.1", default-features = false, features = ["link"] }
autd3-protobuf = { version = "36.0.1", optional = true }
core_affinity = { version = "0.8.3", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
serde = { version = "1.0.226", optional = true, default-features = false }
spin_sleep = { version = "1.3.3", optional = true, default-features = false }
thiserror = { version = "2.0.16", optional = true, default-features = false }
thread-priority = { version = "3.0.0", optional = true, default-features = false }
time = { version = "0.3.44", optional = true, default-features = false }
tokio = { version = "1.47.1", optional = true, default-features = false, features = ["rt-multi-thread"] }
tonic = { version = "0.14.2", optional = true, default-features = false }
tracing = { version = "0.1.41", default-features = false }
zerocopy = { version = "0.8.27", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", optional = true, default-features = false, features = ["Win32", "Win32_System", "Win32_System_Threading"] }

[build-dependencies]
cc = { version = "1.2.38", optional = true, default-features = false }

[dev-dependencies]
autd3 = { version = "36.0.1", features = ["async"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt"], default-features = false }

[[example]]
name = "soem"
path = "examples/soem.rs"
required-features = ["local"]

[[example]]
name = "remote_soem"
path = "examples/remote_soem.rs"
required-features = ["remote"]
