[package]
name = "autd3-link-soem"
description = "autd3 link using SOEM"
readme = "README.md"
keywords = ["autd"]
version = "36.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
license = "GPL-3.0-only"
edition = "2024"
repository = "https://github.com/shinolab/autd3-link-soem"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
async = ["autd3-core/async"]

[dependencies]
autd3-core = { version = "36.0.1", default-features = false, features = ["link", "sleep", "std", "utils"] }
core_affinity = { version = "0.8.3", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
spin_sleep = { version = "1.3.3", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
thread-priority = { version = "3.0.0", default-features = false }
time = { version = "0.3.44", default-features = false }
tracing = { version = "0.1.41", default-features = false }
zerocopy = { version = "0.8.27", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.1", default-features = false, features = ["Win32", "Win32_System", "Win32_System_Threading"] }

[build-dependencies]
cmake = { version = "0.1.54", default-features = false }

[dev-dependencies]
autd3 = { version = "36.0.1", features = ["async"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt"], default-features = false }
