[package]
name = "autd3-link-soem"
description = "autd3 link using SOEM"
readme = "README.md"
keywords = ["autd"]
version = "37.0.0-alpha.2"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
license = "GPL-3.0-only"
edition = "2024"
repository = "https://github.com/shinolab/autd3-link-soem"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
autd3-core = { version = "37.0.0-alpha.2", default-features = false, features = ["link", "sleep", "utils"] }
core_affinity = { version = "0.8.3", default-features = false }
spin_sleep = { version = "1.3.3", default-features = false }
thread-priority = { version = "3.0.0", default-features = false }
time = { version = "0.3.44", default-features = false, features = ["std"] }
tracing = { version = "0.1.41", default-features = false }

[build-dependencies]
cmake = { version = "0.1.54", default-features = false }

[dev-dependencies]
autd3 = { version = "37.0.0-alpha.2", features = [] }
tracing-subscriber = { version = "0.3.20", features = ["fmt"], default-features = false }
